2000-10-24  Pavel Roskin  <proski@gnu.org>

	* tests/mktests.sh: Set locale to C to make sure that syntax.m4
	and update.m4 are locale-independent.

2000-10-24  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_CACHE_DUMP): Add a missing separator for sed
	commands.

2000-10-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AT_FILE_DEPENDENCY): Rename as...
	(AC_FILE_DEPENDENCY_TRACE): this.

2000-10-24  Lars J. Aas  <larsa@sim.no>

	* m4sugar.m4: (m4_tolower, m4_toupper): New macros.
	* acgeneral.m4 (AC_PREFIX_PROGRAM): Use m4_toupper().
	* aclang.m4 (AC_F77_FUNC): Use m4_toupper()/m4_tolower().

2000-10-24  Pavel Roskin  <proski@gnu.org>

	* m4sugar.m4 (m4_quote): Comment change.

2000-10-24  Akim Demaille  <akim@epita.fr>

	Start avoiding dependence upon character ranges.

	* acgeneral.m4 (_AC_INIT_DEFAULTS): Introduce `ac_cr_AZ',
	`ac_cr_az', `ac_cr_09', `ac_cr_alnum' and `ac_hostname'.
	Spread their use.

2000-10-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT): Don't play with `trap'.
	(_AC_INIT_PREPARE): Trap after having created config.log.
	Also trap on 0.
	When trapped, report why in config.log.
	(AC_MSG_WARN, AC_MSG_ERROR): Also output the message in
	config.log.

2000-10-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_SHELL_DIRNAME): Rename as...
	(AC_SHELL_DIRNAME): this.
	s/X$1/X[]$1/ so that when $1 is a macro, it's given a chance to be
	expanded.
	(AC_PREFIX_PROGRAM): Use AC_SHELL_DIRNAME.
	Quote properly.

2000-10-24  Akim Demaille  <akim@epita.fr>

	* tests/tools.m4 (Syntax of the scripts): Specify the path to the
	tested program, some shells don't honor the PATH with `sh PROG'.

2000-10-23  Akim Demaille  <akim@epita.fr>

	Since GNU M4 now comes with its libm4 (binary), to avoid
	ambiguities let's rename `libm4' (M4 code) as `m4sugar':

		Readability And Greater Understanding Stands 4 M4sugar

	name coined by Lars J. Aas.

	* libm4.m4: Rename as...
	* m4sugar.m4: this.
	All dependencies adjusted.
